src/miniaudio_bridge.h

/**
 * Initialize the audio device.
 * @param sample_rate  Audio sample rate (e.g., 44100, 48000)
 * @param channels     Number of channels (1 = mono, 2 = stereo)
 * @param buffer_frames Period size in frames (lower = lower latency)
 * @return 0 on success, -1 on failure
 */
MA_BRIDGE_EXPORT int ma_bridge_init(int sample_rate, int channels, int buffer_frames);
/**
 * Start audio playback.
 * @return 0 on success, -1 on failure
 */
MA_BRIDGE_EXPORT int ma_bridge_start(void);
/**
 * Stop audio playback.
 * @return 0 on success, -1 on failure
 */
MA_BRIDGE_EXPORT int ma_bridge_stop(void);
/**
 * Get the total number of frames consumed by the audio device.
 * Used for synchronization calculations in Dart.
 * @return Total frames consumed since start
 */
MA_BRIDGE_EXPORT uint64_t ma_bridge_get_frames_consumed(void);
/**
 * Get current FIFO fill level in samples.
 * @return Number of samples available in FIFO
 */
MA_BRIDGE_EXPORT int32_t ma_bridge_get_fifo_available(void);
// Advanced Controls
MA_BRIDGE_EXPORT void ma_bridge_set_volume(float volume); // 0.0 to 1.0 (or higher for gain)
MA_BRIDGE_EXPORT int32_t ma_bridge_get_device_sample_rate(void); // Get actual hardware sample rate
MA_BRIDGE_EXPORT int32_t ma_bridge_get_device_channels(void); // Get actual hardware channels
// --- Device Enumeration (Context) ---

/**
 * Get device count.
 * @param type 0 = Playback, 1 = Capture.
 */
MA_BRIDGE_EXPORT int32_t ma_bridge_context_get_device_count(int32_t type);
/**
 * Get device info at index.
 * @param type 0 = Playback, 1 = Capture.
 * @param index Device index.
 * @param name_buffer Buffer to store device name (utf8).
 * @param name_len Size of name buffer.
 * @param id_buffer Buffer to store device ID (ma_device_id, usually bytes).
 * @param id_len Size of id buffer (sizeof(ma_device_id)).
 */
MA_BRIDGE_EXPORT int32_t ma_bridge_context_get_device_info(int32_t type, int32_t index, char* name_buffer, int32_t name_len, void* id_buffer, int32_t id_len);
// --- Device API (Low Level) ---

/**
 * Initialize the audio device with optional device ID.
 * @param device_id Pointer to ma_device_id (can be NULL for default).
 */
MA_BRIDGE_EXPORT int ma_bridge_init_with_device_id(void* device_id, int sample_rate, int channels, int buffer_frames);
// ... (Existing start/stop/read/write/volume APIs for device remain) ...

// --- Engine API (High Level) ---

/**
 * Initialize the high-level audio engine.
 * @return 0 on success.
 */
MA_BRIDGE_EXPORT int ma_bridge_engine_init(void);
MA_BRIDGE_EXPORT void ma_bridge_engine_uninit(void);
MA_BRIDGE_EXPORT int ma_bridge_engine_start(void);
MA_BRIDGE_EXPORT int ma_bridge_engine_stop(void);
MA_BRIDGE_EXPORT void ma_bridge_engine_set_volume(float volume);
/**
 * Play a sound one-shot (fire and forget).
 * @param path File path.
 */
MA_BRIDGE_EXPORT void ma_bridge_engine_play_sound(const char* path);
// --- Sound Object API ---

/** 
 * Create/Load a sound.
 * @return Sound Handle (pointer or ID). Returns 0/NULL on failure.
 */
MA_BRIDGE_EXPORT void* ma_bridge_sound_init_from_file(const char* path, int32_t flags);
MA_BRIDGE_EXPORT void* ma_bridge_sound_init_from_file_with_group(const char* path, void* group_handle, int32_t flags);
MA_BRIDGE_EXPORT void ma_bridge_sound_uninit(void* sound_handle);
MA_BRIDGE_EXPORT void ma_bridge_sound_play(void* sound_handle);
MA_BRIDGE_EXPORT void ma_bridge_sound_stop(void* sound_handle);
MA_BRIDGE_EXPORT void ma_bridge_sound_set_volume(void* sound_handle, float volume);