lib/miniaudio_ffi_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/miniaudio_ffi.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class MiniaudioFfiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  MiniaudioFfiBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  MiniaudioFfiBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Initialize the audio device.
  /// @param sample_rate  Audio sample rate (e.g., 44100, 48000)
  /// @param channels     Number of channels (1 = mono, 2 = stereo)
  /// @param buffer_frames Period size in frames (lower = lower latency)
  /// @return 0 on success, -1 on failure
  int ma_bridge_init(
    int sample_rate,
    int channels,
    int buffer_frames,
  ) {
    return _ma_bridge_init(
      sample_rate,
      channels,
      buffer_frames,
    );
  }

  late final _ma_bridge_initPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int, ffi.Int)>>(
          'ma_bridge_init');
  late final _ma_bridge_init =
      _ma_bridge_initPtr.asFunction<int Function(int, int, int)>();

  /// Start audio playback.
  /// @return 0 on success, -1 on failure
  int ma_bridge_start() {
    return _ma_bridge_start();
  }

  late final _ma_bridge_startPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('ma_bridge_start');
  late final _ma_bridge_start =
      _ma_bridge_startPtr.asFunction<int Function()>();

  /// Stop audio playback.
  /// @return 0 on success, -1 on failure
  int ma_bridge_stop() {
    return _ma_bridge_stop();
  }

  late final _ma_bridge_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('ma_bridge_stop');
  late final _ma_bridge_stop = _ma_bridge_stopPtr.asFunction<int Function()>();

  /// Get the total number of frames consumed by the audio device.
  /// Used for synchronization calculations in Dart.
  /// @return Total frames consumed since start
  int ma_bridge_get_frames_consumed() {
    return _ma_bridge_get_frames_consumed();
  }

  late final _ma_bridge_get_frames_consumedPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function()>>(
          'ma_bridge_get_frames_consumed');
  late final _ma_bridge_get_frames_consumed =
      _ma_bridge_get_frames_consumedPtr.asFunction<int Function()>();

  /// Get current FIFO fill level in samples.
  /// @return Number of samples available in FIFO
  int ma_bridge_get_fifo_available() {
    return _ma_bridge_get_fifo_available();
  }

  late final _ma_bridge_get_fifo_availablePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>(
          'ma_bridge_get_fifo_available');
  late final _ma_bridge_get_fifo_available =
      _ma_bridge_get_fifo_availablePtr.asFunction<int Function()>();

  /// Advanced Controls
  void ma_bridge_set_volume(
    double volume,
  ) {
    return _ma_bridge_set_volume(
      volume,
    );
  }

  late final _ma_bridge_set_volumePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
          'ma_bridge_set_volume');
  late final _ma_bridge_set_volume =
      _ma_bridge_set_volumePtr.asFunction<void Function(double)>();

  int ma_bridge_get_device_sample_rate() {
    return _ma_bridge_get_device_sample_rate();
  }

  late final _ma_bridge_get_device_sample_ratePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>(
          'ma_bridge_get_device_sample_rate');
  late final _ma_bridge_get_device_sample_rate =
      _ma_bridge_get_device_sample_ratePtr.asFunction<int Function()>();

  int ma_bridge_get_device_channels() {
    return _ma_bridge_get_device_channels();
  }

  late final _ma_bridge_get_device_channelsPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>(
          'ma_bridge_get_device_channels');
  late final _ma_bridge_get_device_channels =
      _ma_bridge_get_device_channelsPtr.asFunction<int Function()>();

  /// Get device count.
  /// @param type 0 = Playback, 1 = Capture.
  int ma_bridge_context_get_device_count(
    int type,
  ) {
    return _ma_bridge_context_get_device_count(
      type,
    );
  }

  late final _ma_bridge_context_get_device_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>(
          'ma_bridge_context_get_device_count');
  late final _ma_bridge_context_get_device_count =
      _ma_bridge_context_get_device_countPtr.asFunction<int Function(int)>();

  /// Get device info at index.
  /// @param type 0 = Playback, 1 = Capture.
  /// @param index Device index.
  /// @param name_buffer Buffer to store device name (utf8).
  /// @param name_len Size of name buffer.
  /// @param id_buffer Buffer to store device ID (ma_device_id, usually bytes).
  /// @param id_len Size of id buffer (sizeof(ma_device_id)).
  int ma_bridge_context_get_device_info(
    int type,
    int index,
    ffi.Pointer<ffi.Char> name_buffer,
    int name_len,
    ffi.Pointer<ffi.Void> id_buffer,
    int id_len,
  ) {
    return _ma_bridge_context_get_device_info(
      type,
      index,
      name_buffer,
      name_len,
      id_buffer,
      id_len,
    );
  }

  late final _ma_bridge_context_get_device_infoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Int32,
              ffi.Int32,
              ffi.Pointer<ffi.Char>,
              ffi.Int32,
              ffi.Pointer<ffi.Void>,
              ffi.Int32)>>('ma_bridge_context_get_device_info');
  late final _ma_bridge_context_get_device_info =
      _ma_bridge_context_get_device_infoPtr.asFunction<
          int Function(int, int, ffi.Pointer<ffi.Char>, int,
              ffi.Pointer<ffi.Void>, int)>();

  /// Initialize the audio device with optional device ID.
  /// @param device_id Pointer to ma_device_id (can be NULL for default).
  int ma_bridge_init_with_device_id(
    ffi.Pointer<ffi.Void> device_id,
    int sample_rate,
    int channels,
    int buffer_frames,
  ) {
    return _ma_bridge_init_with_device_id(
      device_id,
      sample_rate,
      channels,
      buffer_frames,
    );
  }

  late final _ma_bridge_init_with_device_idPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int, ffi.Int,
              ffi.Int)>>('ma_bridge_init_with_device_id');
  late final _ma_bridge_init_with_device_id = _ma_bridge_init_with_device_idPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int, int, int)>();

  /// Initialize the high-level audio engine.
  /// @return 0 on success.
  int ma_bridge_engine_init() {
    return _ma_bridge_engine_init();
  }

  late final _ma_bridge_engine_initPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('ma_bridge_engine_init');
  late final _ma_bridge_engine_init =
      _ma_bridge_engine_initPtr.asFunction<int Function()>();

  void ma_bridge_engine_uninit() {
    return _ma_bridge_engine_uninit();
  }

  late final _ma_bridge_engine_uninitPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'ma_bridge_engine_uninit');
  late final _ma_bridge_engine_uninit =
      _ma_bridge_engine_uninitPtr.asFunction<void Function()>();

  int ma_bridge_engine_start() {
    return _ma_bridge_engine_start();
  }

  late final _ma_bridge_engine_startPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('ma_bridge_engine_start');
  late final _ma_bridge_engine_start =
      _ma_bridge_engine_startPtr.asFunction<int Function()>();

  int ma_bridge_engine_stop() {
    return _ma_bridge_engine_stop();
  }

  late final _ma_bridge_engine_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('ma_bridge_engine_stop');
  late final _ma_bridge_engine_stop =
      _ma_bridge_engine_stopPtr.asFunction<int Function()>();

  void ma_bridge_engine_set_volume(
    double volume,
  ) {
    return _ma_bridge_engine_set_volume(
      volume,
    );
  }

  late final _ma_bridge_engine_set_volumePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
          'ma_bridge_engine_set_volume');
  late final _ma_bridge_engine_set_volume =
      _ma_bridge_engine_set_volumePtr.asFunction<void Function(double)>();

  /// Play a sound one-shot (fire and forget).
  /// @param path File path.
  void ma_bridge_engine_play_sound(
    ffi.Pointer<ffi.Char> path,
  ) {
    return _ma_bridge_engine_play_sound(
      path,
    );
  }

  late final _ma_bridge_engine_play_soundPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'ma_bridge_engine_play_sound');
  late final _ma_bridge_engine_play_sound = _ma_bridge_engine_play_soundPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Create/Load a sound.
  /// @return Sound Handle (pointer or ID). Returns 0/NULL on failure.
  ffi.Pointer<ffi.Void> ma_bridge_sound_init_from_file(
    ffi.Pointer<ffi.Char> path,
    int flags,
  ) {
    return _ma_bridge_sound_init_from_file(
      path,
      flags,
    );
  }

  late final _ma_bridge_sound_init_from_filePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Char>,
              ffi.Int32)>>('ma_bridge_sound_init_from_file');
  late final _ma_bridge_sound_init_from_file =
      _ma_bridge_sound_init_from_filePtr.asFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Char>, int)>();

  ffi.Pointer<ffi.Void> ma_bridge_sound_init_from_file_with_group(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Void> group_handle,
    int flags,
  ) {
    return _ma_bridge_sound_init_from_file_with_group(
      path,
      group_handle,
      flags,
    );
  }

  late final _ma_bridge_sound_init_from_file_with_groupPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Void>,
              ffi.Int32)>>('ma_bridge_sound_init_from_file_with_group');
  late final _ma_bridge_sound_init_from_file_with_group =
      _ma_bridge_sound_init_from_file_with_groupPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Void>, int)>();

  void ma_bridge_sound_uninit(
    ffi.Pointer<ffi.Void> sound_handle,
  ) {
    return _ma_bridge_sound_uninit(
      sound_handle,
    );
  }

  late final _ma_bridge_sound_uninitPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ma_bridge_sound_uninit');
  late final _ma_bridge_sound_uninit = _ma_bridge_sound_uninitPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void ma_bridge_sound_play(
    ffi.Pointer<ffi.Void> sound_handle,
  ) {
    return _ma_bridge_sound_play(
      sound_handle,
    );
  }

  late final _ma_bridge_sound_playPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ma_bridge_sound_play');
  late final _ma_bridge_sound_play = _ma_bridge_sound_playPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void ma_bridge_sound_stop(
    ffi.Pointer<ffi.Void> sound_handle,
  ) {
    return _ma_bridge_sound_stop(
      sound_handle,
    );
  }

  late final _ma_bridge_sound_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'ma_bridge_sound_stop');
  late final _ma_bridge_sound_stop = _ma_bridge_sound_stopPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void ma_bridge_sound_set_volume(
    ffi.Pointer<ffi.Void> sound_handle,
    double volume,
  ) {
    return _ma_bridge_sound_set_volume(
      sound_handle,
      volume,
    );
  }
